--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
 					<li><a href="#top">Top</a></li>
 					<li><a href="#work">Work</a></li>
 					<li><a href="#portfolio">Portfolio</a></li>
-					<li><a href="#contact">Contact</a></li>
+					<li><a href="#contact">Contacts</a></li>
 				</ul>
 			</nav>
 
