--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@
 								<h1>Hi. I'm <strong>Darin Boyland</strong>.</h1>
 							</header>
 							<p>A highly motivated <strong>Full-stack</strong> <strong>Web Developer</strong>, <strong>Software Developer</strong>, and dedicated <strong>Scrum Master</strong> that knows how to lead teams by establishing <strong>Agile Methologies</strong>.  With over 8+ years of <strong>programming experience</strong>, I have helped teams deliver projects on time, within budget, and see a 15% or more increase in production and a 8% or more increase in revenue. </p>
-							<a href="#work" class="button large scrolly">More about my experties...</a>
+							<a href="#work" class="button large scrolly">More about my experties</a>
 						</div>
 					</div>
 				</div>
